Removes (more or less) deprecated code (as suggested by sonarlint).